fix style on firefox of the card

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -255,7 +255,7 @@ nav img {
 #contents.cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-  grid-auto-rows: 1fr;
+  grid-auto-rows: auto;
 
   grid-gap: 20px;
   justify-items: center;
